--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DOCKERHUB_USER='techdufus'
 DOCKER_IMAGE_NAME='livestream-test'
 DOCKER_IMAGE_PROD_TAG='live'
+DOCKERHUB_REPO_URL='https://index.docker.io/'
